tests/tooling/fixtures/native/execution/positive/message_send_nil_bound_identifier_pre_reassignment_elision.objc3
// Positive execution fixture: nil-bound identifier send-site before reassignment elides and links without runtime shim.
module MessageSendNilBoundIdentifierPreReassignmentElisionExecution;

fn main() {
  let receiver = nil;
  let sent = [receiver ping];
  receiver = 1;
  return sent + 16;
}
