tests/tooling/fixtures/native/execution/negative/pure_definition_impure_message_send.objc3
module PureDefinitionImpureMessageSendExecution;

pure fn touch() -> i32 {
  return [1 ping];
}

fn main() -> i32 {
  return touch();
}
